# did-sdk-py

./: CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml  validate-codecov-config.yml
did_sdk_py/: __init__.py  hedera_client_provider.py
did_sdk_py/anoncreds/: hedera_anoncreds_registry.py  types.py
did_sdk_py/did/: hedera_did.py  hedera_did_resolver.py  types.py
did_sdk_py/did/hcs/events/owner/: hcs_did_update_did_owner_event.py
did_sdk_py/did/hcs/events/verification_method/: hcs_did_update_verification_method_event.py
did_sdk_py/did/hcs/events/verification_relationship/: hcs_did_update_verification_relationship_event.py
did_sdk_py/hcs/: constants.py  hcs_message.py  hcs_message_envelope.py  hcs_message_resolver.py  hcs_message_transaction.py  hcs_topic_listener.py  hcs_topic_service.py  utils.py
did_sdk_py/hcs/hcs_file/: hcs_file_chunk_message.py  hcs_file_service.py
did_sdk_py/utils/: encoding.py  keys.py  logger.py  pyjnius.py  timestamp.py
docs/design/: hcs-read-operations-caching.md  high-level-architecture.md  spec-changes-adoption.md
docs/dev/: configuration.md  getting-started.md  index.md
docs/dev/modules/: anoncreds.md  common.md  did.md
tests/integration/: conftest.py  demo.py  test_hcs_file_service.py  test_hcs_topic_service.py  test_hedera_anoncreds_registry.py  test_hedera_did.py  test_hedera_did_resolver.py
tests/unit/: conftest.py
tests/unit/anoncreds/: test_hedera_anoncreds_registry.py  test_utils.py
tests/unit/anoncreds/models/: test_anoncreds_cred_def.py  test_anoncreds_schema.py  test_cred_def_value.py
tests/unit/anoncreds/models/revocation/: test_anoncreds_rev_list.py  test_anoncreds_rev_reg_def.py  test_anoncreds_rev_reg_entry.py  test_rev_reg_def_value.py  test_rev_reg_entry_value.py
tests/unit/did/: common.py  test_did_document.py  test_encoding.py  test_hcs_did_message.py  test_hcs_message_transaction.py  test_hedera_did.py  test_utils.py
tests/unit/did/event/: test_hcs_did_event_parser.py
tests/unit/did/event/document/: test_hcs_did_create_did_document_event.py  test_hcs_did_delete_event.py
tests/unit/hcs/: test_hcs_topic_service.py
tests/unit/hcs/hcs_file/: test_hcs_file_chunk_message.py  test_hcs_file_service.py  test_hcs_file_utils.py
tests/unit/utils/: test_logger.py  test_memory_cache.py  test_timestamp.py
(+7 files in other folders)
